src/index.css
:root {
    --bg-color: #e6e6e6;
    --font-color: #e6e6e6;
    --header-body-bg: #505050;
    --button-top-bg: #646464;
    --button-reg-bg: #7d7d7d;
    --outer-shadow: #646464;
    --inner-glow: #e6e6e6;
}

.light-theme {
    --bg-color: #7d7d7d;
    --font-color: #505050;
    --header-body-bg: #c4c2c2;
    --button-top-bg: #969595;
    --button-reg-bg: #eae9e9;
    --outer-shadow: #313030;
    --inner-glow: #ffffff;
}

body {
    margin: 0;
    padding: 0;
    font-weight: 400;
    font-size: 16px;
}

.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: var(--bg-color);
    font-family: "Inter", sans-serif;
}

.calculator {
    width: 55rem;
    border: 1px solid #000000;
    border-radius: 20px;
    box-shadow: 0 20px 40px var(--outer-shadow);
    position: relative;
    overflow: hidden;
}

.calculator::before {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    box-shadow: inset 0 0 5px 0 var(--inner-glow);
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    border-radius: inherit;
    pointer-events: none;
}

.calc_header {
    background-color: var(--header-body-bg);
    height: 14vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.header_top {
    padding: 10px 0 0 10px;
    display: flex;
    flex-direction: row;
    gap: 0.7rem;
}

.control_button {
    width: 2vh;
    height: 2vh;
    border-radius: 50%;
}

.red {
    background-color: #ff5f55;
}

.yellow {
    background-color: #fab92d;
}

.green {
    background-color: #28c83c;
}

.display {
    color: var(--font-color);
    font-size: 9vh;
    font-weight: 300;
    text-align: right;
    padding-right: 10px;
}

.calc_body {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    color: var(--font-color);
    background-color: var(--header-body-bg);
    gap: 2px;
    user-select: none;
}

.calc_column {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    gap: 2px;
    width: 50%;
}

.calc_row {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    height: 9vh;
    gap: 2px;
}

.calc_body .button {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 4vh;
    background-color: var(--button-reg-bg);
    cursor: pointer;
    width: 50%;
}

.calc_row .dark {
    background-color: var(--button-top-bg);
}

.calc_row .orange {
    background-color: #ff9b0a;
    display: flex;
    align-items: center;
}

.calc_row .button.orange.operator.active {
    background-color: #f8b759;
}

.wide {
    flex-grow: 1;
}

#toggle {
    padding: 10px;
    background-color: var(--header-body-bg);
    color: var(--font-color);
    margin-bottom: 20px;
    border-radius: 10px;
    cursor: pointer;
    border: 1px solid #000000;
}

@media only screen and (max-width: 900px) {
    .calculator {
        width: 90%;
        font-size: 4vh;
    }

    .calc_body .button {
        font-size: 4vw;
    }
}

